fix(theme-base10): background color behind progress bar should match toolbar color

--- a/profiles/theme-base10/resources/css/base.css
+++ b/profiles/theme-base10/resources/css/base.css
@@ -148,7 +148,7 @@ a[role="button"] svg, .theme-toggle svg, .icon {
     height: 20px;
 }
 
-.toolbar pb-progress {
+.content-top:has(.toolbar) {
     background-color: var(--jinks-toolbar-background-color);
 }
 
